# Projet_Collecte_Donn-es_IA

./: README.md  dashboard.html  main_pipeline.py  pipeline.py  pyproject.toml  requirements.txt  run_pipeline.sh  run_transform.py  settings.py  test_API.py
.github/workflows/: blank.yml
Extract/: .env  db.py  extract_api.py  extract_csv.py  extract_db.py
Extract/energitic_pipeline/: measurements_last_24hours.csv  open-meteo_48.8566_2.3522.json  production_2025_10.csv  production_2025_11.csv  weather_data_20251127T130923Z.json
Graphics/: dashboard.html  dashboard_generator.py  html_quality_dashboard.py
Load/: load_postgres.py
Loading/: insert_API.py  insert_measurements.py  insert_prod.py
Test/: test_API.py
Tests/: test_pipeline.py
Transform/: __init__.py  data_cleaning.py  date_normalization.py  enrichment.py  transform_clean.py  transform_quality.py  unit_conversion.py
database/: create_schema.sql  data_init.sql  dump.sql
energitic_pipeline/: README.md  data_final.csv
tests/: test_cleaning.py  test_date_normalization.py  test_enrichment.py  test_unit_conversion.py  test_weather.py
