[tool.poetry]
name = "projet_collecte_donnees_ia"
version = "0.1.0"
description = "A project for collecting and transforming data using AI."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"